--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "tslint": "^5.18.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
