--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-dev-utils": "^7.0.5",
     "react-dom": "^16.8.5",
     "react-redux": "^5.0.7",
-    "react-scripts": "^3.2.0",
+    "react-scripts": "^3.3.0",
     "redux": "^4.0.0",
     "tslint": "^5.18.0"
   },
@@ -59,6 +59,7 @@
     "rename-webpack-plugin": "^2.0.0",
     "tfx-cli": "^0.7.8",
     "tslint": "^5.18.0",
+    "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^4.0.0",
     "typescript": "^3.5.3"
   }
