--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,20 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "chrome",
+      "request": "launch",
+      "name": "Launch Chrome",
+      "url": "https://localhost:3000",
+      "webRoot": "${workspaceFolder}"
+    },
+  {
+    "type": "chrome",
+    "request": "attach",
+    "name": "Attach to Chrome",
+    "port": 9222,
+    "webRoot": "${workspaceFolder}"
+  },
+    {
       "name": "Launch Firefox",
       "type": "firefox",
       "request": "launch",
