--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@uifabric/utilities": "^7.0.3",
     "azure-devops-ui": "^1.152.3",
+    "https-localhost": "^4.4.1",
     "immer": "^5.3.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.6.2",
