--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@uifabric/utilities": "^7.24.0",
     "azure-devops-ui": "^2.166.7",
+    "azure-devops-extension-api": "~1.153.2",
+    "azure-devops-extension-sdk": "^2.0.11",
     "https-localhost": "^4.4.1",
     "immer": "^5.3.0",
     "prop-types": "^15.6.2",
@@ -49,8 +51,6 @@
     "@types/react-dom": "^16.8.5",
     "@types/react-redux": "^7.1.1",
     "@types/react-router-dom": "^4.3.4",
-    "azure-devops-extension-api": "^1.153.2",
-    "azure-devops-extension-sdk": "^2.0.11",
     "core-js": "^3.1.4",
     "del-cli": "^2.0.0",
     "node-sass": "^4.14.1",
