--- a/package.json
+++ b/package.json
@@ -4,20 +4,19 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
-    "@uifabric/utilities": "^7.24.0",
-    "azure-devops-ui": "^2.166.7",
-    "azure-devops-extension-api": "~1.153.2",
+    "@uifabric/utilities": "^7.33.5",
+    "azure-devops-ui": "^2.167.1",
+    "azure-devops-extension-api": "~1.158.0",
     "azure-devops-extension-sdk": "^2.0.11",
-    "https-localhost": "^4.4.1",
-    "immer": "^8.0.1",
-    "prop-types": "^15.6.2",
-    "react": "^16.8.6",
+    "https-localhost": "^4.6.4",
+    "immer": "^9.0.1",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.1",
     "react-dev-utils": "^11.0.4",
-    "react-dom": "^16.8.5",
-    "react-redux": "^5.0.7",
-    "react-scripts": "^3.4.1",
-    "redux": "^4.0.0",
-    "tslint": "^5.18.0"
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-scripts": "^4.0.3",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "HTTPS=true react-scripts start",
@@ -44,24 +43,23 @@
     ]
   },
   "devDependencies": {
-    "@types/history": "^4.7.2",
-    "@types/jest": "^24.0.16",
-    "@types/node": "^12.6.8",
-    "@types/react": "^16.8.23",
-    "@types/react-dom": "^16.8.5",
-    "@types/react-redux": "^7.1.1",
-    "@types/react-router-dom": "^4.3.4",
-    "core-js": "^3.1.4",
-    "del-cli": "^2.0.0",
-    "node-sass": "^4.14.1",
-    "office-ui-fabric-react": "^7.123.4",
-    "react-router-dom": "^4.3.1",
-    "redux": "^4.0.4",
+    "@types/history": "^4.7.8",
+    "@types/jest": "^26.0.21",
+    "@types/node": "^14.14.35",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
+    "core-js": "^3.9.1",
+    "del-cli": "^3.0.1",
+    "node-sass": "^5.0.0",
+    "office-ui-fabric-react": "^7.165.0",
+    "react-router-dom": "^5.2.0",
     "rename-webpack-plugin": "^2.0.0",
-    "tfx-cli": "^0.7.8",
-    "tslint": "^5.18.0",
+    "tfx-cli": "^0.8.3",
+    "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-react": "^4.0.0",
-    "typescript": "^3.5.3"
+    "tslint-react": "^4.1.0",
+    "typescript": "^4.2.3"
   }
 }
