fixed node-sass by sass package and filter issue.

--- a/package.json
+++ b/package.json
@@ -52,10 +52,10 @@
     "@types/react-router-dom": "^5.1.7",
     "core-js": "^3.9.1",
     "del-cli": "^3.0.1",
-    "node-sass": "^5.0.0",
     "office-ui-fabric-react": "^7.165.1",
     "react-router-dom": "^5.2.0",
     "rename-webpack-plugin": "^2.0.0",
+    "sass": "^1.52.1",
     "tfx-cli": "^0.8.3",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
