--- a/.azure-pipelines/azure-pipelines.yml
+++ b/.azure-pipelines/azure-pipelines.yml
@@ -13,13 +13,13 @@ trigger:
             - main
 
 pool:
-    name: Hosted VS2017
-    demands: npm
+  vmImage: 'windows-latest'
+  demands: npm
 
 steps:
 - task: NodeTool@0
   inputs:
-    versionSpec: '10.x'
+    versionSpec: '16.x'
   displayName: 'Install Node.js'
 
 - script: |
@@ -50,7 +50,7 @@ steps:
 
 - task: TfxInstaller@2
   inputs:
-    version: 'v0.6.x'
+    version: 'v0.12.x'
 
 - task: PublishAzureDevOpsExtension@2
   inputs:
