--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "azure-devops-extension-api": "~1.153.2",
     "azure-devops-extension-sdk": "^2.0.11",
     "azure-devops-ui": "^2.167.1",
+    "css-select": "^5.1.0",
+    "glob-parent": ">=5.1.2",
     "https-localhost": "^4.6.4",
     "immer": "^9.0.1",
     "prop-types": "^15.7.2",
