--- a/.github/workflows/release.dev.yml
+++ b/.github/workflows/release.dev.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches: [ development, main ]
 
+env:
+  extension_version: "v2.${{ github.run_number }}"
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -20,7 +23,7 @@ jobs:
         run: npm run package-dev
       - uses: actions/upload-artifact@v2
         with:
-          name: "azure-pull-request-hub-dev.v${{ github.GITHUB_RUN_NUMBER }}.vsix"
+          name: "azure-pull-request-hub-dev.v2.${{ github.run_number }}.vsix"
           path: "${{ github.workspace }}/azure-pull-request-hub-dev.vsix"
   deploy:
     runs-on: ubuntu-latest
@@ -29,10 +32,10 @@ jobs:
     steps:
       - uses: actions/download-artifact@v3
         with:
-          name: "azure-pull-request-hub-dev.v${{ github.GITHUB_RUN_NUMBER }}.vsix"
+          name: "azure-pull-request-hub-dev.${{ env.extension_version }}.vsix"
       - name: Add nuget to PATH
         uses: nuget/setup-nuget@v1
       - name: Install TFX CLI
         run: npm i -g tfx-cli
       - name: Publish Extension - DEV
-        run: tfx extension publish --json --publisher ${{ vars.PUBLISHER_ID }} --vsix "azure-pull-request-hub-dev.v${{ github.GITHUB_RUN_NUMBER }}.vsix" --share-with ${{ vars.SHARE_WITH }} --auth-type ${{ secrets.ADO_TOKEN }}
+        run: tfx extension publish --json --publisher ${{ vars.PUBLISHER_ID }} --vsix "azure-pull-request-hub-dev.${{ env.extension_version }}.vsix" --share-with ${{ vars.SHARE_WITH }} --auth-type ${{ secrets.ADO_TOKEN }}
