--- a/.github/workflows/release.dev.yml
+++ b/.github/workflows/release.dev.yml
@@ -5,14 +5,14 @@ on:
     branches: [ development, main ]
 
 env:
-  EXTENSION_NAME_VERSION_COMMAND: echo "EXTENSION_NAME_VERSION=caribeiro84.pull-request-manager-hub-new-dev-2.$(date +'%Y%m%d').$GITHUB_RUN_NUMBER.gen.vsix" >> $GITHUB_ENV
+  EXTENSION_VERSION_COMMAND: echo "EXTENSION_VERSION=2.$(date +'%Y%m%d').$GITHUB_RUN_NUMBER" >> $GITHUB_ENV
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: set env
-        run: ${{ env.EXTENSION_NAME_VERSION_COMMAND }}
+        run: ${{ env.EXTENSION_VERSION_COMMAND }}
       - name: Checkout the code
         uses: actions/checkout@v2
       - name: Add nuget to PATH
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: "pull-request-manager-hub-extension"
-          path: "${{ github.workspace }}/${{ env.EXTENSION_NAME_VERSION }}"
+          path: "${{ github.workspace }}/azure-devops-pull-request-manager-hub.vsix"
   deploy:
     runs-on: ubuntu-latest
     environment: 'dev'
@@ -42,4 +42,4 @@ jobs:
       - name: Install TFX CLI
         run: npm i -g tfx-cli
       - name: Publish Extension - DEV
-        run: tfx extension publish --json --publisher ${{ vars.PUBLISHER_ID }} --service-url https://marketplace.visualstudio.com/ --vsix "${{ github.workspace }}/${{ env.EXTENSION_NAME_VERSION }}" --share-with ${{ vars.SHARE_WITH }} --auth-type pat --token ${{ secrets.ADO_TOKEN }}
+        run: tfx extension publish --json --publisher ${{ vars.PUBLISHER_ID }} --service-url https://marketplace.visualstudio.com/ --vsix "${{ github.workspace }}/azure-devops-pull-request-manager-hub.vsix" --share-with ${{ vars.SHARE_WITH }} --auth-type pat --token ${{ secrets.ADO_TOKEN }}
