--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "package-release": "npm run clean-build && tfx extension create --root ./ --output-path ./azure-devops-pull-request-manager-hub.vsix --manifest-globs ./vss-extension.json --overrides-file ./vss-extension.release.json",
-    "package-dev": "npm run clean-build && tfx extension create --root ./ --output-path ./azure-devops-pull-request-manager-hub.vsix --rev-version $EXTENSION_VERSION --manifest-globs ./vss-extension.json --overrides-file ./vss-extension.dev.json --share-with caixaazul",
+    "package-dev": "npm run clean-build && tfx extension create --root ./ --output-path ./azure-devops-pull-request-manager-hub.vsix --rev-version true --manifest-globs ./vss-extension.json --overrides-file ./vss-extension.dev.json --share-with caixaazul",
     "clean-build": "del-cli build/**/runtime~main*.map build/**/runtime~main*.js"
   },
   "eslintConfig": {
