--- a/.github/workflows/release.dev.yml
+++ b/.github/workflows/release.dev.yml
@@ -4,10 +4,15 @@ on:
   push:
     branches: [ development, main ]
 
+env:
+  EXTENSION_VERSION_COMMAND: echo "EXTENSION_VERSION=2.$(date +'%Y%m%d').$GITHUB_RUN_NUMBER" >> $GITHUB_ENV
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: set env
+        run: "${{ env.EXTENSION_VERSION_COMMAND }} && echo \"{\"version\": \"$EXTENSION_VERSION\"}\" > vss-extension.version.json"
       - name: Checkout the code
         uses: actions/checkout@v2
       - name: Add nuget to PATH
