--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "package-release": "npm run clean-build && tfx extension create --root ./ --output-path ./azure-devops-pull-request-manager-hub.vsix --manifest-globs ./vss-extension.json --overrides-file ./vss-extension.release.json --override $EXTENSION_VERSION_JSON",
-    "package-dev": "npm run clean-build && tfx extension create --root ./ --output-path ./azure-devops-pull-request-manager-hub.vsix --manifest-globs ./vss-extension.json --overrides-file ./vss-extension.dev.json --override $EXTENSION_VERSION_JSON --share-with caixaazul",
+    "package-release": "npm run clean-build && tfx extension create --root ./ --output-path ./azure-devops-pull-request-manager-hub.vsix --manifest-globs ./vss-extension.json --overrides-file ./vss-extension.release.json --override \"$EXTENSION_VERSION_JSON\"",
+    "package-dev": "npm run clean-build && tfx extension create --root ./ --output-path ./azure-devops-pull-request-manager-hub.vsix --manifest-globs ./vss-extension.json --overrides-file ./vss-extension.dev.json --override \"$EXTENSION_VERSION_JSON\" --share-with caixaazul",
     "clean-build": "del-cli build/**/runtime~main*.map build/**/runtime~main*.js"
   },
   "eslintConfig": {
