--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "package-release": "npm run clean-build && tfx extension create --root ./ --output-path ./azure-devops-pull-request-manager-hub.vsix --manifests ./vss-extension.json ./vss-extension.release.json --override \"$EXTENSION_VERSION_JSON\"",
-    "package-dev": "npm run clean-build && tfx extension create --root ./ --output-path ./azure-devops-pull-request-manager-hub.vsix --manifests ./vss-extension.json ./vss-extension.dev.json --override \"$EXTENSION_VERSION_JSON\" --share-with caixaazul",
+    "package-dev": "echo $EXTENSION_VERSION_JSON && npm run clean-build && tfx extension create --root ./ --output-path ./azure-devops-pull-request-manager-hub.vsix --manifests ./vss-extension.json ./vss-extension.dev.json --override \"$EXTENSION_VERSION_JSON\" --share-with caixaazul",
     "clean-build": "del-cli build/**/runtime~main*.map build/**/runtime~main*.js"
   },
   "eslintConfig": {
