moving to github actions v27

--- a/.github/workflows/release.dev.yml
+++ b/.github/workflows/release.dev.yml
@@ -5,7 +5,7 @@ on:
     branches: [ development, main ]
 
 env:
-  EXTENSION_VERSION_COMMAND: "export EXTENSION_VERSION_GH=\"2.$(date +'%Y%m%d').$GITHUB_RUN_NUMBER\" && echo \"EXTENSION_VERSION=$EXTENSION_VERSION_GH\" >> $GITHUB_ENV && echo \"export EXTENSION_VERSION_JSON=\"{'version': '$EXTENSION_VERSION_GH'}'\" >> $GITHUB_ENV"
+  EXTENSION_VERSION_COMMAND: "export EXTENSION_VERSION_GH=\"2.$(date +'%Y%m%d').$GITHUB_RUN_NUMBER\" && echo \"EXTENSION_VERSION=$EXTENSION_VERSION_GH\" >> $GITHUB_ENV && echo \"export EXTENSION_VERSION_JSON=\"{'version': '$EXTENSION_VERSION_GH'}\" >> $GITHUB_ENV"
 
 jobs:
   build:
