moving to github actions v30

--- a/.github/workflows/release.dev.yml
+++ b/.github/workflows/release.dev.yml
@@ -5,7 +5,8 @@ on:
     branches: [ development, main ]
 
 env:
-  EXTENSION_VERSION_COMMAND: "export EXTENSION_VERSION_GH=\"2.$(date +'%Y%m%d').$GITHUB_RUN_NUMBER\" && echo \"EXTENSION_VERSION=$EXTENSION_VERSION_GH\" >> $GITHUB_ENV && echo \"{\"version\": \"$EXTENSION_VERSION_GH\"\"}\" > vss-extension.version.json"
+  EXTENSION_VERSION_COMMAND: "export EXTENSION_VERSION_GH=\"2.$(date +'%Y%m%d').$GITHUB_RUN_NUMBER\" && echo \"EXTENSION_VERSION=$EXTENSION_VERSION_GH\" >> $GITHUB_ENV"
+  EXTENSION_VERSION_JSON_COMMAND: "echo \"{\"version\": \"$EXTENSION_VERSION_GH\"\"}\" > vss-extension.version.json"
 
 jobs:
   build:
@@ -13,6 +14,8 @@ jobs:
     steps:
       - name: set env
         run: "${{ env.EXTENSION_VERSION_COMMAND }}"
+      - name: set version
+        run: "${{ env.EXTENSION_VERSION_JSON_COMMAND }}"
       - name: Checkout the code
         uses: actions/checkout@v2
       - name: Add nuget to PATH
