--- a/.github/workflows/release.dev.yml
+++ b/.github/workflows/release.dev.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   EXTENSION_VERSION_COMMAND: "export EXTENSION_VERSION_GH=\"2.$(date +'%Y%m%d').$GITHUB_RUN_NUMBER\" && echo \"EXTENSION_VERSION=$EXTENSION_VERSION_GH\" >> $GITHUB_ENV"
-  EXTENSION_VERSION_JSON_COMMAND: "echo \"{\"version\": \"$EXTENSION_VERSION_GH\"\"}\" > vss-extension.version.json"
+  EXTENSION_VERSION_JSON_COMMAND: "echo \"{\"version\": \"$EXTENSION_VERSION_GH\"}\" > vss-extension.version.json"
 
 jobs:
   build:
